# scanDoor

./: CMakeLists.txt  COMPATIBILITY_SOLUTION.md  LIBGPIOD_V2_API_GUIDE.md  README.md  build_and_test.sh  clean.sh  requirements.txt
cmake/: test_gpiod_v2.cpp
examples/: pi_example.py
scripts/: check_gpio_backends.py
src/: main.cpp  wiegand_reader.cpp
src/core/: CMakeLists.txt  door_types.hpp  interfaces.hpp
src/door/: CMakeLists.txt  door.hpp  door_lock.hpp  door_strike.hpp  gpio_compat.hpp  gpio_sensor.hpp  magnetic_lock.hpp  wiegand_reader.hpp
src/doorscan/: __init__.py  devices.py  main.py  pi_gpio.py  worker.py
src/mqtt/: CMakeLists.txt  mqtt_client.hpp
src/utils/: CMakeLists.txt  logger.hpp
tests/: test_simulation.py
